# LAB02-AMR

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
src/amr_bringup/: package.xml  setup.py
src/amr_bringup/amr_bringup/: lifecycle_manager_node.py
src/amr_bringup/launch/: lab01.launch.py  lab02.launch.py  lab03.launch.py  project.launch.py
src/amr_control/: package.xml  setup.py
src/amr_control/amr_control/: pure_pursuit.py  pure_pursuit_node.py  wall_follower.py  wall_follower_node.py
src/amr_localization/: package.xml  setup.cfg  setup.py
src/amr_localization/amr_localization/: map.py  particle_filter.py  particle_filter_node.py
src/amr_localization/maps/: lab02.json
src/amr_msgs/: CMakeLists.txt  package.xml
src/amr_msgs/msg/: PoseStamped.msg  RangeScan.msg
src/amr_planning/: package.xml  setup.cfg  setup.py
src/amr_planning/amr_planning/: a_star.py  a_star_node.py  intersect.py  map.py
src/amr_simulation/: package.xml  setup.cfg  setup.py
src/amr_simulation/amr_simulation/: coppeliasim.py  coppeliasim_node.py  robot.py  robot_p3dx.py
src/amr_simulation/worlds/: lab01.ttt  lab01_challenge.ttt  lab02.ttt  p3dx.ttm  project.ttt
